--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,9 +1,7 @@
 # bookish-palm-tree
 
-hello 3
-
 body {
-    background-color: powderblue;
+    background-color: rgb(0, 106, 182);
   }
   h1 {
     color: blue;
