--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -1,6 +1,6 @@
 /* This applies styles to the entire body of your webpage */
 body {
-    background-color: #f0f0f0; /* Light gray background */
-    color: #333333; /* Dark gray text */
+    background-color: #ff0000; /* Light gray background */
+    color: #f000e4; /* Dark gray text */
     font-family: Arial, sans-serif; /* Optional: Choose a font */
   }
