--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 /* Style for the body (applies to the entire page) */
 body {
-  background-color: #3a3a4d;  /* Light background */
-  color: #000000;  /* Dark text */
+  background-color: #3a3a4d;  /* Background color */
+  color: #000000;  /* Text color */
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 20px;
@@ -23,8 +23,8 @@ footer {
 
 /* Style for navigation buttons */
 nav button {
-  background-color: #631954;  /* Blue background */
-  color: rgb(141, 2, 2);               /* White text */
+  background-color: #631954;  /* Background color */
+  color: rgb(141, 2, 2);               /* Text color */
   border: none;               /* No border */
   padding: 10px 20px;         /* Padding inside the buttons */
   margin: 5px;                /* Space between buttons */
@@ -34,5 +34,5 @@ nav button {
 }
 
 nav button:hover {
-  background-color: #005f99;  /* Darker blue on hover */
+  background-color: #005f99;  /* Color on hover */
 }
